--- a/.github/workflows/cctv.yml
+++ b/.github/workflows/cctv.yml
@@ -2,10 +2,10 @@ name: 央视
 
 on:
   schedule:
-    - cron: '40 21 * * *'
+    - cron: '40 21 1 1 *'
   workflow_dispatch:
     分支:
-      - main
+      - develop
 
 jobs:
   run_script:
