--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git diff
+        if [[ -f "allchannel.txt" ]]; then
+          git add allchannel.txt
+        fi
         if [[ -f "live.m3u" ]]; then
           git add live.m3u
         fi
